--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -76,6 +76,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('tokenizer.pkl', 'wb') as file:\n",
+    "    pickle.dump(tokenizer, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
