completed the project. now deploying

--- a/model_train.ipynb
+++ b/model_train.ipynb
@@ -406,19 +406,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+      "WARNING:absl:Compiled the loaded model, but the compiled metrics have yet to be built. `model.compile_metrics` will be empty until you train or evaluate the model.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: saved_model_format/assets\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:tensorflow:Assets written to: saved_model_format/assets\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved artifact at 'saved_model_format'. The following endpoints are available:\n",
+      "\n",
+      "* Endpoint 'serve'\n",
+      "  args_0 (POSITIONAL_ONLY): TensorSpec(shape=(None, 13), dtype=tf.float32, name='input_layer_1')\n",
+      "Output Type:\n",
+      "  TensorSpec(shape=(None, 4818), dtype=tf.float32, name=None)\n",
+      "Captures:\n",
+      "  6119601360: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119601552: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119601744: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119599248: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119599056: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119598096: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119599632: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119600592: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  6119599440: TensorSpec(shape=(), dtype=tf.resource, name=None)\n"
      ]
     }
    ],
    "source": [
-    "model.save('predict_next_word.h5')"
+    "from tensorflow.keras.models import load_model\n",
+    "\n",
+    "# Load the .h5 model\n",
+    "model = load_model('predict_next_word.h5')\n",
+    "\n",
+    "# Save the model in SavedModel format\n",
+    "model.export('saved_model_format')\n"
    ]
   },
   {
